# Protobuff-Practice-Client-Server-

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Proto2-Project-01/Client/: client.cpp
Proto2-Project-01/Server/: server.cpp  server.h  server_app.cpp
proto/: main_proto.proto
tests/: client_tests.cpp  server_tests.cpp
